<resources>
    <string name="app_name">zyc框架</string>
    <string name="sign_up">注册</string>
    <string name="sign_in">登录</string>
    <string name="name">姓名</string>
    <string name="email">邮箱</string>
    <string name="phone">手机号码</string>
    <string name="password">密码</string>
    <string name="re_password">重复密码</string>
    <string name="sign_up_finish">已经注册完成？请登录</string>
    <string name="sign_in_up">还没有注册？请注册</string>
    <string name="sign_in_forget">忘记密码</string>
    <string name="fa_weixin">{fa-weixin}</string>
</resources>
